[package]
name = "c-wspp-rs"
version = "0.1.0"
edition = "2024"
authors = ["JKLeckr"]
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
url = "2.5.8"
yawc = "0.3.2"

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
]
